# exception_research

./: .gitignore  README.md  generate.py
beyond_performance/: CMakeLists.txt  README.md  baremetal.profile  comparisons.md  conanfile.py  fit_sw.cpp  linker.ld
beyond_performance/fit_sw.exe.dSYM/Contents/: Info.plist
beyond_performance/fit_sw.exe.dSYM/Contents/Resources/Relocations/aarch64/: fit_sw.exe.yml
experiments/: structs.hpp
experiments/benchmarks/short16_inline_unwind/: CMakeLists.txt  baremetal.profile  conanfile.py  linker.ld  main.cpp
paper/: on_exceptions.md
paper/resources/arm_exception_index_table_entry/: compact_inline.json  generic.json  noexcept.json
paper/resources/arm_exception_table/: full_table_entry.json  last_descriptors.json
paper/resources/arm_exception_table/catch_descriptors/16-bit/: catch_all_descriptor.json  catch_all_terminate_descriptor.json  catch_by_non_reference_descriptor.json  catch_by_reference_descriptor.json
paper/resources/arm_exception_table/catch_descriptors/32-bit/: catch_all_descriptor.json  catch_all_terminate_descriptor.json  catch_by_non_reference_descriptor.json  catch_by_reference_descriptor.json
paper/resources/arm_exception_table/cleanup_descriptors/: 16_bit_descriptor.json  32_bit_descriptor.json
paper/resources/arm_exception_table/personality/: long16_long32_entry.json  short16_entry.json
paper/resources/arm_exception_table/throws_descriptor/: throws_descriptor_wip.json
performance/: CMakeLists.txt  arm_exidx_parser.py  baremetal.profile  conanfile.py  except.backup.cpp  except.cpp  except.cpp.backup2  except.cpp.extra  except_experimental.cpp  except_experimental2.cpp  except_experimental_ram.cpp  except_index_info.txt  experimental.cpp  gdb_control.py  generate.py  info.csv  machine_code_steps.csv  machine_code_steps_optimized_v1.csv  machine_code_steps_optimized_v2.csv  machine_code_steps_optimized_v6.csv  machine_code_steps_v2.csv  machine_code_steps_v3.csv  parse_exception_index.py  ram_linker.ld  readelf-except.txt  result.cpp  sizes.txt  weaken_symbol.sh
size/: collect_info.sh  csv.py  except_readelf_22.txt  exception.py  file_sizes_v4.txt  generate.py  info.csv  main.cpp  result_readelf_22.txt  sizes_v4.csv
size/resources/: conanfile.py  linker.ld
tools/: gdb_control.py  generate.py  parse_exception_index.py
